# iKaptcha

./: .gitattributes  .gitignore  ANALYSIS.md  CLAUDE.md  CLEANUP.md  FINDINGS.md  LICENSE  PLAN_pseudolabel.md  README.md  eval_compare.py  eval_yolo.py  eval_yolo_corrected.py  export_onnx.py  fetch_captchas.py  generate_captcha.py  generate_dataset.py  kfold_validate.py  predict.py  predict_onnx.py  prepare_pseudo_train_v2.py  pseudo_label.py  pyproject.toml  train_phased.py
dataset_pseudo_v2/text_labels/train/: 1.txt  1002.txt  1003.txt  1005.txt  1007.txt  1008.txt  1010.txt  1011.txt  1012.txt  1021.txt  1024.txt  1025.txt  1026.txt  1031.txt  1032.txt  1033.txt  1034.txt  1035.txt  1037.txt  104.txt  1040.txt  1044.txt  1045.txt  1047.txt  105.txt  1056.txt  1059.txt  1061.txt  1062.txt  1064.txt  1065.txt  1068.txt  1069.txt  107.txt  1070.txt  1073.txt  1079.txt  1083.txt  1084.txt  1085.txt  (+10582 more)
dataset_pseudo_v2/text_labels/val/: 1004.txt  1006.txt  1019.txt  1028.txt  1030.txt  1053.txt  1063.txt  1066.txt  1072.txt  1076.txt  1077.txt  1078.txt  1105.txt  1111.txt  1118.txt  1131.txt  1139.txt  1166.txt  118.txt  1189.txt  1202.txt  1211.txt  1212.txt  124.txt  1240.txt  1241.txt  1248.txt  1255.txt  129.txt  1293.txt  1311.txt  1313.txt  1317.txt  1318.txt  1319.txt  1341.txt  1344.txt  1371.txt  1375.txt  1376.txt  (+112 more)
ikariam_pirate_captcha_dataset/: ikariam_pirate_captcha.yaml
ikariam_pirate_captcha_dataset/labels/train/: 1.txt  10.txt  100.txt  1000.txt  1001.txt  1002.txt  1003.txt  1005.txt  1007.txt  1008.txt  1009.txt  101.txt  1010.txt  1011.txt  1012.txt  (+1185 more)
(+1042 files in other folders)
